--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "affiliate-server",
   "version": "1.0.0",
   "description": "A Node.js service for deferred deep linking",
-  "main": "server.js",
+  "main": "api/index.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -11,7 +11,8 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.6.1",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
